--- a/RedditUserTools/templates/index.html
+++ b/RedditUserTools/templates/index.html
@@ -110,6 +110,7 @@
 
             <div id="charts">
                 <div id="monthChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+                <div id="piCharts" style="display: inline"><div id="submissionBreakdownChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div><div id="karmaBreakdownChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div></div>
             </div>
 
             <div id="submissionBreakdown">
@@ -222,6 +223,7 @@
                     </li>
                 </ul>
                 <p>Please let me know if you encounter any errors or have ideas (click "Contact Ogree")</p>
+                <p>Version 1.2</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
