Updated Month display
Initial work on providing subreddit breakdown

--- a/RedditUserTools/templates/index.html
+++ b/RedditUserTools/templates/index.html
@@ -110,6 +110,7 @@
 
             <div id="charts">
                 <div id="monthChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+                <div id="piCharts" style="display: inline"><div id="submissionBreakdownChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div><div id="karmaBreakdownChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div></div>
             </div>
 
             <div id="submissionBreakdown">
